feat: 获取当前用户信息接口
